fix: responsivness issues fixed on small screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,19 +38,19 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)),
       url(../public/images/volunteers.png);
   }
+  .community-input-bg {
+    background: rgba(101, 165, 225, 0.41);
+  }
   .name-input-sm {
     width: 100px;
     height: 43px;
-    background: rgba(101, 165, 225, 0.41);
   }
   .name-input-lg {
     width: 273px;
     height: 81px;
-    background: rgba(101, 165, 225, 0.41);
   }
   .email-input-sm {
     height: 43px;
-    background: rgba(101, 165, 225, 0.41);
   }
   .email-input-lg {
     /* width: 834px; */
